<resources>
    <string name="app_name">Calty Farm</string>
    <string name="mulai">Mulai</string>
    <string name="auth_text">Verifikasi nomer ponsel kamu untuk menikmati layanan dari Calty Farm</string>
    <string name="nomer_telepon">Nomer Telepon</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="_62xxx_xxxx_xxxx">+62xxx-xxxx-xxxx</string>
    <string name="verif_burner">Masukkan 6 angka kode yang telah dikirim via sms ke:</string>
    <string name="verif_failed">Gagal melakukan verifikasi</string>
    <string name="jika_dalam">Jika dalam</string>
    <string name="kirim_ulang_sms">Kirim ulang sms</string>
    <string name="home">Beranda</string>
    <string name="profil">Profil</string>
    <string name="artikel">Artikel</string>
    <string name="muhammad_wyndham">Muhammad Wyndham</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="gender_idon">gender idon</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="shopicon">shopIcon</string>
    <string name="silahkan_pilih_dokter_hewan_terdekat">Silahkan pilih dokter hewan terdekat</string>
    <string name="pilih_dokter_hewan_yang_anda_inginkan">Pilih dokter hewan yang anda inginkan</string>
    <string name="pilih">Pilih</string>
    <string name="input_data_sapi">Input Data Sapi</string>
    <string name="input_sapi_desc">membuat identitas sapi dengan mudah dan dapat diakses 24 jam</string>
    <string name="daftar_status_sapi">Daftar Status Sapi</string>
    <string name="daftar_status_sapi_desc">cek semua kondisi ternak secara akurat dan realtime dari aplikasi anda
    </string>
    <string name="tanda_alarm">Tanda Alarm</string>
    <string name="alarm_desc">pengingat untuk tanda kondisi sapi secara realtime</string>
    <string name="list_tindakan">List Tindakan</string>
    <string name="list_tindakan_desc">daftar tindakan yang diinstruksikan oleh dokter hewan</string>
    <string name="hubungi_dokter_hewan">Hubungi Dokter Hewan</string>
    <string name="hubungi_dokter_hewan_desc">tanya jawab langsung dengan dokter hewan tentang kondisi ternak anda
    </string>
    <string name="input_sapi_id_label">ID Sapi</string>
    <string name="input_sapi_birthdate_label">Tanggal Lahir</string>
    <string name="input_sapi_breed_label">Jenis / Breed</string>
    <string name="input_sapi_gender_label">Jenis Kelamin</string>
    <string name="input_sapi_entry_date_label">Tanggal Datang</string>
    <string name="input_sapi_out_date_label">Tanggal Keluar</string>
    <string name="input_sapi_cow_tag_label">Tanda Sapi</string>
    <string name="input_sapi_weight_label">Berat Badan (kg)</string>
    <string name="input_sapi_pregnant_date_label">Tanggal Bunting</string>
    <string name="input_sapi_vaccine_status_label">Status Vaksin</string>
    <string name="input_sapi_parasite_worm_drug_label">Obat Cacing</string>
    <string name="input_sapi_action_history_label">Riwayat Tindakan</string>
    <string name="input_sapi_temperature_label">Temperatur</string>
    <string name="input_sapi_tonus_rumen_label">Tonus Rumen</string>
    <string name="input_sapi_insemination_label">Inseminasi</string>
    <string name="input_sapi_treatment_label">Pengobatan</string>
    <string name="input_sapi_location_label">Lokasi</string>
    <string name="input_sapi_submit_button">LANJUT</string>
    <string name="input_sapi_pick_date_hint">Pilih Tanggal</string>
    <string name="input_sapi_title">Input Data Sapi</string>
    <string name="input_sapi_error_id_must_number">Kolom ID harus angka</string>
    <string name="input_sapi_error_id_must_not_empty">Kolom ID tidak boleh kosong</string>
    <string name="input_sapi_error_birth_date_must_be_filled">Kolom tanggal lahir harus diisi</string>
    <string name="input_sapi_error_entry_date_must_be_filled">Kolom tanggal datang harus diisi</string>
    <string name="input_sapi_error_out_date_must_be_filled">Kolom tanggal keluar harus diisi</string>
    <string name="input_sapi_error_pregnant_date_must_be_filled">Kolom tanggal bunting harus diisi</string>
    <string name="input_sapi_error_weight_must_not_be_empty">Kolom berat badan tidak boleh kosong</string>
    <string name="input_sapi_error_weight_must_be_number">Kolom berat badan harus angka</string>
    <string name="input_sapi_basic_input_title">Input Data Sapi</string>
    <string name="input_sapi_action_history_input_title">Riwayat Tindakan</string>
    <string name="input_sapi_cow_age_label">Usia Sapi</string>
    <string name="input_sapi_parent_id_label">ID Induk</string>
    <string name="input_sapi_is_pregnant_label">Sedang Bunting</string>
    <string name="input_sapi_pregnant_number_label">Bunting Keberapa</string>
    <string name="input_sapi_error_pregnant_number_must_be_filled">Kolom bunting keberapa harus diisi</string>
    <string name="input_sapi_add_action_history_title">Tambahkan riwayat tindakan</string>
    <string name="input_sapi_date_label">Tanggal</string>
    <string name="input_sapi_action_label">Tindakan</string>
    <string name="input_sapi_condition_label">Kondisi Sapi</string>
    <string name="input_sapi_drug_or_vaccine_label">Obat atau Vaksin</string>
    <string name="input_sapi_add_button">Tambahkan</string>
    <string name="input_sapi_error_date_field_must_be_filled">Kolom tanggal harus diisi</string>
    <string name="input_sapi_error_action_field_must_be_filled">Kolom tindakan harus diisi</string>
    <string name="input_sapi_error_diagnostic_field_must_be_filled">Kolom diagnosa harus diisi</string>
    <string name="input_sapi_error_cow_condition_must_be_filled">Kolom kondisi sapi harus diisi</string>
    <string-array name="breed">
        <item>Ongol</item>
        <item>Brahman</item>
        <item>Peranakan Ongol (PO)</item>
        <item>Simental</item>
        <item>Limausin</item>
        <item>SimPO</item>
        <item>FH</item>
        <item>Peranakan FH (PFH)</item>
        <item>Wagyu</item>
    </string-array>
    <string name="APP_ID">familyhub-zadxyu3d7au</string>
    <string name="daftar_dokter_hewan">Daftar Dokter Hewan</string>
    <string name="gambar_grup">Gambar grup</string>
    <string name="nama_tujuan_chat">Nama Tujuan Chat</string>
    <string name="cek_kondisi_ternak_anda_nkapan_saja_di_mana_saja">Cek kondisi ternak anda \nkapan saja, di mana saja</string>
    <string name="chat_title">Chat Dengan Investor dan Anak Kandang</string>
    <string name="chat_subtitle">jawab pertanyaan langsung dari Investor dan Anak Kandang</string>
    <string-array name="gender">
        <item>Jantan</item>
        <item>Betina</item>
    </string-array>
    <string-array name="age">
        <item>Dewasa</item>
        <item>Anakan</item>
    </string-array>
    <string name="title_activity_add_reminder">Tambah Alarm Jadwal</string>
    <string name="title_activity_edit_reminder">Ubah Alarm Jadwal</string>
    <string name="title_activity_licenses">Lisensi</string>
    <string name="add_reminder">Alarm Jadwal</string>
    <string name="details">Detail</string>
    <string name="date">Tanggal</string>
    <string name="time">Jam</string>
    <string name="repeat">Ulangi</string>
    <string name="repeat_off">Mati</string>
    <string name="repeat_no">Interval Perulangan </string>
    <string name="repeat_type">Jenis Perulangan</string>
    <string name="action_discard_reminder">Buang Alarm Jadwal</string>
    <string name="action_save_reminder">Simpan Alarm Jadwal</string>
    <string name="no_reminders">Tekan di tombol plus untuk membuat alarm jadwal baru</string>
</resources>