<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.ProfileEditActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        <EditText
                android:id="@+id/et_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_lengkap"
                android:layout_margin="5dp"
                android:drawablePadding="8dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"
                tools:targetApi="o"
                android:inputType="text"/>
        <EditText
                android:id="@+id/et_date_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lahir"
                android:layout_margin="5dp"
                android:drawablePadding="8dp"
                android:autofillHints="date"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:focusable="false"
                android:clickable="true"
                tools:targetApi="o"
                android:inputType="date"
                tools:ignore="KeyboardInaccessibleWidget"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/ic_extension_black_24dp"
                    android:contentDescription="@string/gender_idon"/>
            <Spinner
                    android:id="@+id/spinner_gender_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
                android:id="@+id/et_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomor_telepon"
                android:layout_margin="5dp"
                android:drawablePadding="8dp"
                android:autofillHints="date"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:focusable="false"
                android:editable="false"
                tools:targetApi="o"
                android:inputType="phone"
                tools:ignore="KeyboardInaccessibleWidget"/>
        <EditText
                android:id="@+id/et_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_margin="5dp"
                android:drawablePadding="8dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_email_black_24dp"
                tools:targetApi="o"
                android:inputType="textEmailAddress"/>
        <Button
                android:id="@+id/bt_profile_edit_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>