<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".ui.MainActivity">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="?actionBarSize"
            android:elevation="10dp">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/calty_lanscape"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginEnd="10dp"
                />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                        android:id="@+id/iv_banner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/defaultUnselected"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/white"
                        android:text="@string/cek_kondisi_ternak_anda_nkapan_saja_di_mana_saja"
                        app:layout_constraintTop_toTopOf="@id/iv_banner"
                        app:layout_constraintBottom_toBottomOf="@id/iv_banner"
                        app:layout_constraintStart_toStartOf="@id/iv_banner"
                        android:layout_marginStart="15dp"
                        />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                    android:id="@+id/ll_input_sapi"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingStart="10dp"
                    android:background="?android:selectableItemBackground"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/phone_cow_head"
                        android:layout_height="70dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_gravity="center_vertical">
                    <com.caltyfarm.caltyfarm.customElements.BebasNeueTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/darkGrey"
                            android:textSize="18sp"
                            android:maxLines="1"
                            android:text="@string/input_data_sapi"/>
                    <com.caltyfarm.caltyfarm.customElements.ConstantiaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="4"
                            android:text="@string/input_sapi_desc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/ll_status_sapi"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingStart="10dp"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/logo_ui"
                        android:layout_height="70dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_gravity="center_vertical">
                    <com.caltyfarm.caltyfarm.customElements.BebasNeueTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/darkGrey"
                            android:maxLines="1"
                            android:textSize="18sp"
                            android:text="@string/daftar_status_sapi"/>
                    <com.caltyfarm.caltyfarm.customElements.ConstantiaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="4"
                            android:text="@string/daftar_status_sapi_desc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/ll_alarm"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingStart="10dp"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/alarm"
                        android:layout_height="70dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_gravity="center_vertical">
                    <com.caltyfarm.caltyfarm.customElements.BebasNeueTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/darkGrey"
                            android:maxLines="1"
                            android:textSize="18sp"
                            android:text="@string/tanda_alarm"/>
                    <com.caltyfarm.caltyfarm.customElements.ConstantiaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="4"
                            android:text="@string/alarm_desc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/ll_list_tindakan"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingStart="10dp"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/list_text"
                        android:layout_height="70dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_gravity="center_vertical">
                    <com.caltyfarm.caltyfarm.customElements.BebasNeueTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/darkGrey"
                            android:maxLines="1"
                            android:textSize="18sp"
                            android:text="@string/list_tindakan"/>
                    <com.caltyfarm.caltyfarm.customElements.ConstantiaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="4"
                            android:text="@string/list_tindakan_desc"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/ll_chat"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?android:selectableItemBackground"
                    android:paddingStart="10dp"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">
                <ImageView
                        android:layout_width="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/chat_phone"
                        android:layout_height="70dp"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_gravity="center_vertical">
                    <com.caltyfarm.caltyfarm.customElements.BebasNeueTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/darkGrey"
                            android:maxLines="1"
                            android:textSize="18sp"
                            android:text="@string/hubungi_dokter_hewan"/>
                    <com.caltyfarm.caltyfarm.customElements.ConstantiaTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="4"
                            android:text="@string/hubungi_dokter_hewan_desc"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>